Implements websocket and rate limit